--- a/src/app/modules/landing/components/general-form/general-form.component.html
+++ b/src/app/modules/landing/components/general-form/general-form.component.html
@@ -1,67 +1,90 @@
-<form autocomplete="off" [formGroup]="_form" (ngSubmit)="onSubmit()">
-  <div class="row">
-    <div class="col-12 col-md-6">
-      <mat-form-field class="w-100">
-        <mat-label for="first_name">First Name</mat-label>
-        <input matInput id="first_name" type="text" formControlName="first_name">
-        <mat-error></mat-error>
-      </mat-form-field>
-    </div>
+<ng-container>
+  <mat-stepper linear #stepper class="container">
+    <!--  General information -->
+    <mat-step class="my-2">
+      <ng-template matStepLabel>General information:</ng-template>
+      <ng-template matStepContent>
+        <!-- General form -->
+        <form autocomplete="off" [formGroup]="_form" (ngSubmit)="onSubmit()">
+          <div class="row">
+            <div class="col-12 col-md-6 my-2">
+              <mat-form-field class="w-100">
+                <mat-label for="first_name">First Name</mat-label>
+                <input matInput id="first_name" type="text" formControlName="first_name"
+                  placeholder="Insert your first name">
+                <mat-error></mat-error>
+              </mat-form-field>
+            </div>
 
-    <div class="col-12 col-md-6">
-      <mat-form-field class="w-100">
-        <mat-label for="last_name">Last Name</mat-label>
-        <input matInput id="last_name" formControlName="last_name">
-        <mat-error></mat-error>
-      </mat-form-field>
-    </div>
+            <div class="col-12 col-md-6 my-2">
+              <mat-form-field class="w-100">
+                <mat-label for="last_name">Last Name</mat-label>
+                <input matInput id="last_name" formControlName="last_name" placeholder="Insert your last name">
+                <mat-error></mat-error>
+              </mat-form-field>
+            </div>
 
-    <div class="col-12 col-md-6">
-      <mat-form-field class="w-100">
-        <mat-label for="email">Email</mat-label>
-        <input matInput id="email" formControlName="email">
-        <mat-error></mat-error>
-      </mat-form-field>
-    </div>
+            <div class="col-12 col-md-6 my-2">
+              <mat-form-field class="w-100">
+                <mat-label for="email">Email</mat-label>
+                <input matInput id="email" formControlName="email" placeholder="Insert your email">
+                <mat-error></mat-error>
+              </mat-form-field>
+            </div>
 
-    <div class="col-12 col-md-6">
-      <mat-form-field class="w-100">
-        <mat-label for="phone">Phone</mat-label>
-        <input matInput id="phone" formControlName="phone">
-        <mat-error></mat-error>
-      </mat-form-field>
-    </div>
+            <div class="col-12 col-md-6 my-2">
+              <mat-form-field class="w-100">
+                <mat-label for="phone">Phone</mat-label>
+                <input matInput id="phone" formControlName="phone" placeholder="Insert your phone">
+                <mat-error></mat-error>
+              </mat-form-field>
+            </div>
 
-    <div class="col-12">
-      <mat-form-field class="w-100">
-        <mat-label for="city">City</mat-label>
-        <input matInput id="city" formControlName="city">
-        <mat-error></mat-error>
-      </mat-form-field>
-    </div>
+            <div class="col-12">
+              <mat-form-field class="w-100">
+                <mat-label for="city">City</mat-label>
+                <input matInput id="city" formControlName="city" placeholder="Insert your city">
+                <mat-error></mat-error>
+              </mat-form-field>
+            </div>
 
-    <div class="col-12 col-md-6">
-      <mat-form-field class="w-100">
-        <mat-label for="state">State</mat-label>
-        <input matInput id="state" formControlName="state">
-        <mat-error></mat-error>
-      </mat-form-field>
-    </div>
+            <div class="col-12 col-md-6 my-2">
+              <mat-form-field class="w-100">
+                <mat-label for="state">State</mat-label>
+                <input matInput id="state" formControlName="state" placeholder="Insert your state">
+                <mat-error></mat-error>
+              </mat-form-field>
+            </div>
 
-    <div class="col-12 col-md-6">
-      <mat-form-field class="w-100">
-        <mat-label for="zip">Zip</mat-label>
-        <input matInput id="zip" formControlName="zip">
-        <mat-error></mat-error>
-      </mat-form-field>
-    </div>
+            <div class="col-12 col-md-6 my-2">
+              <mat-form-field class="w-100">
+                <mat-label for="zip">Zip</mat-label>
+                <input matInput id="zip" formControlName="zip" placeholder="Insert your zip">
+                <mat-error></mat-error>
+              </mat-form-field>
+            </div>
 
-    <div class="col-12">
-      <mat-form-field class="w-100">
-        <mat-label for="message">Message</mat-label>
-        <textarea matInput id="message" formControlName="message"></textarea>
-        <mat-error></mat-error>
-      </mat-form-field>
-    </div>
-  </div>
-</form>
+            <div class="col-12">
+              <mat-form-field class="w-100">
+                <mat-label for="message">Message</mat-label>
+                <textarea matInput id="message" formControlName="message"
+                  placeholder="Insert your question or message"></textarea>
+                <mat-error></mat-error>
+              </mat-form-field>
+            </div>
+          </div>
+
+          <app-additional-form (onFormCompleted)="onAdditionalFormCompleted($event)"></app-additional-form>
+
+          <div class="d-flex justify-content-end gap-4 mt-4">
+            <button mat-button type="button" (click)="onReturnClicked()">Back</button>
+            <button mat-raised-button type="submit" [disabled]="!isGeneralFormValid">
+              <mat-icon fontIcon="send" iconPositionEnd></mat-icon>
+              Send
+            </button>
+          </div>
+        </form>
+      </ng-template>
+    </mat-step>
+  </mat-stepper>
+</ng-container>
