--- a/src/app/modules/landing/components/insurance-type-form/insurance-type-form.component.html
+++ b/src/app/modules/landing/components/insurance-type-form/insurance-type-form.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-12 col-md-4 px-5">
+  <div class="col-12 col-md-4 px-5 my-2">
     <mat-card appearance="outlined" class="transparent form-card h-100" [class.active]="isLifeInsurance"
       (click)="onOptionClicked(InsuranceOption.Life)">
       <mat-card-content class="my-4 text-center">
@@ -11,8 +11,21 @@
       </mat-card-content>
     </mat-card>
   </div>
+  
+  <div class="col-12 col-md-4 px-5 my-2">
+    <mat-card appearance="outlined" class="transparent form-card h-100" [class.active]="isStateInsurance"
+      (click)="onOptionClicked(InsuranceOption.State)">
+      <mat-card-content class="my-4 text-center">
+        <div class="d-flex justify-content-center mb-2">
+          <mat-icon class="medium" aria-hidden="false" aria-label="item.label"
+            [fontIcon]="InsuranceOptions[InsuranceOption.State].icon"></mat-icon>
+        </div>
+        <h6>{{InsuranceOptions[InsuranceOption.State].title}}</h6>
+      </mat-card-content>
+    </mat-card>
+  </div>
 
-  <div class="col-12 col-md-4 px-5">
+  <div class="col-12 col-md-4 px-5 my-2">
     <mat-card appearance="outlined" class="transparent form-card h-100" [class.active]="isWealthInsurance"
       (click)="onOptionClicked(InsuranceOption.Wealth)">
       <mat-card-content class="my-4 text-center">
@@ -21,19 +34,6 @@
             [fontIcon]="InsuranceOptions[InsuranceOption.Wealth].icon"></mat-icon>
         </div>
         <h6>{{InsuranceOptions[InsuranceOption.Wealth].title}}</h6>
-      </mat-card-content>
-    </mat-card>
-  </div>
-
-  <div class="col-12 col-md-4 px-5">
-    <mat-card appearance="outlined" class="transparent form-card h-100" [class.active]="isRolloverInsurance"
-      (click)="onOptionClicked(InsuranceOption.Rollovers)">
-      <mat-card-content class="my-4 text-center">
-        <div class="d-flex justify-content-center mb-2">
-          <mat-icon class="medium" aria-hidden="false" aria-label="item.label"
-            [fontIcon]="InsuranceOptions[InsuranceOption.Rollovers].icon"></mat-icon>
-        </div>
-        <h6>{{InsuranceOptions[InsuranceOption.Rollovers].title}}</h6>
       </mat-card-content>
     </mat-card>
   </div>
