--- a/src/app/modules/landing/components/partner-form/partner-form.component.html
+++ b/src/app/modules/landing/components/partner-form/partner-form.component.html
@@ -1,24 +1,158 @@
-<form autocomplete="off" [formGroup]="_form" (ngSubmit)="onSubmit()">
-  <div class="row">
-    <div class="col-12 col-md-6">
-      <mat-label>Current income</mat-label>
-      <mat-slider min="0" max="250000" step="10000" showTickMarks discrete [displayWith]="formatLabel" class="w-100">
-        <input matSliderThumb formControlName="income" >
-      </mat-slider>
-    </div>
+<mat-stepper linear #stepper class="container">
+  <!--  General information -->
+  <mat-step [stepControl]="generalForm" class="my-2">
+    <ng-template matStepLabel>General information:</ng-template>
+    <ng-template matStepContent>
+      <!-- General form -->
+      <form autocomplete="off" [formGroup]="generalForm" (ngSubmit)="onSubmit()">
+        <div class="row">
+          <div class="col-12 col-md-6 my-2">
+            <mat-form-field class="w-100">
+              <mat-label for="first_name">First Name</mat-label>
+              <input matInput id="first_name" type="text" formControlName="first_name"
+                placeholder="Insert your first name">
+              <mat-error></mat-error>
+            </mat-form-field>
+          </div>
 
-    <div class="col-12">
-      <p>Part time</p>
-      <p>Full time</p>
-      <p>Referred</p>
-    </div>
-    
-    <div class="col-12">
-        <mat-slide-toggle formControlName="is_clean">This is a highly regulated industry, do you have a clean background?</mat-slide-toggle>
-    </div>
+          <div class="col-12 col-md-6 my-2">
+            <mat-form-field class="w-100">
+              <mat-label for="last_name">Last Name</mat-label>
+              <input matInput id="last_name" formControlName="last_name" placeholder="Insert your last name">
+              <mat-error></mat-error>
+            </mat-form-field>
+          </div>
 
-    <div class="col-12">
-      <mat-checkbox formControlName="has_license">Are you a licensed agent?</mat-checkbox>
-    </div>
-  </div>
-</form> 
+          <div class="col-12 col-md-6 my-2">
+            <mat-form-field class="w-100">
+              <mat-label for="email">Email</mat-label>
+              <input matInput id="email" formControlName="email" placeholder="Insert your email">
+              <mat-error></mat-error>
+            </mat-form-field>
+          </div>
+
+          <div class="col-12 col-md-6 my-2">
+            <mat-form-field class="w-100">
+              <mat-label for="phone">Phone</mat-label>
+              <input matInput id="phone" formControlName="phone" placeholder="Insert your phone">
+              <mat-error></mat-error>
+            </mat-form-field>
+          </div>
+
+          <div class="col-12">
+            <mat-form-field class="w-100">
+              <mat-label for="city">City</mat-label>
+              <input matInput id="city" formControlName="city" placeholder="Insert your city">
+              <mat-error></mat-error>
+            </mat-form-field>
+          </div>
+
+          <div class="col-12 col-md-6 my-2">
+            <mat-form-field class="w-100">
+              <mat-label for="state">State</mat-label>
+              <input matInput id="state" formControlName="state" placeholder="Insert your state">
+              <mat-error></mat-error>
+            </mat-form-field>
+          </div>
+
+          <div class="col-12 col-md-6 my-2">
+            <mat-form-field class="w-100">
+              <mat-label for="zip">Zip</mat-label>
+              <input matInput id="zip" formControlName="zip" placeholder="Insert your zip">
+              <mat-error></mat-error>
+            </mat-form-field>
+          </div>
+
+          <div class="col-12">
+            <mat-form-field class="w-100">
+              <mat-label for="message">Message</mat-label>
+              <textarea matInput id="message" formControlName="message"
+                placeholder="Insert your question or message"></textarea>
+              <mat-error></mat-error>
+            </mat-form-field>
+          </div>
+        </div>
+
+        <div class="d-flex justify-content-end gap-4 mt-4">
+          <button mat-button type="button" (click)="onReturnClicked()">Back</button>
+          <button mat-raised-button type="button" [disabled]="!isGeneralFormValid" matStepperNext>
+            Next
+          </button>
+        </div>
+      </form>
+    </ng-template>
+  </mat-step>
+
+  <!-- Additional information -->
+  <mat-step [stepControl]="additionalForm" class="my-2">
+    <ng-template matStepLabel>Additional information:</ng-template>
+    <ng-template matStepContent>
+      <!-- Client form -->
+      <form autocomplete="off" [formGroup]="additionalForm" (ngSubmit)="onSubmit()">
+        <div class="row">
+
+
+          <div class="col-12 my-2">
+            <mat-label>What life insurance products are you interested in?</mat-label>
+            <p class="text-disabled">Select all that apply</p>
+            <div class="row">
+              @for (item of PartnerTimeOptions; let index = $index; track item.title) {
+              <div class="col-12 col-md-4 my-2">
+                <mat-card appearance="outlined" class="transparent form-card h-100" [class.active]="item.isClicked"
+                  (click)="selectPartnerTime(item, index)">
+                  <mat-card-content class="my-4 text-center">
+                    <div class="d-flex justify-content-center mb-2">
+                      <mat-icon class="medium" aria-hidden="false" aria-label="item.label"
+                        [fontIcon]="item.icon"></mat-icon>
+                    </div>
+                    <h6>{{item.title}}</h6>
+                  </mat-card-content>
+                </mat-card>
+              </div>
+              } @empty {
+              <li>There are no items.</li>
+              }
+            </div>
+          </div>
+
+          <div class="col-12 col-md-6">
+            <mat-label>Current income</mat-label>
+            <mat-slider min="0" max="250000" step="10000" showTickMarks discrete [displayWith]="formatLabel"
+              class="w-100">
+              <input matSliderThumb formControlName="income">
+            </mat-slider>
+          </div>
+
+          <div class="col-12">
+            <mat-checkbox formControlName="has_license">Are you a licensed agent?</mat-checkbox>
+          </div>
+
+          <div class="col-12">
+            <mat-checkbox formControlName="is_clean">This is a highly regulated industry. Please check the box to
+              confirm you have a clean background.</mat-checkbox>
+          </div>
+
+          <ng-container *ngIf="needsExplanation">
+            <div class="col-12">
+              <mat-form-field class="w-100">
+                <mat-label for="explanation">Why?</mat-label>
+                <textarea matInput id="explanation" formControlName="explanation" placeholder="Insert a text explaining why"></textarea>
+              </mat-form-field>
+            </div>
+          </ng-container>
+        </div>
+
+        <!-- Additional form -->
+        <app-additional-form (onFormCompleted)="onAdditionalFormCompleted($event)"></app-additional-form>
+
+        <div class="d-flex justify-content-end gap-4 mt-4">
+          <button mat-button type="button" matStepperPrevious>Back</button>
+          <button mat-raised-button type="submit" [disabled]="!isAdditionalFormValid">
+            <mat-icon fontIcon="send" iconPositionEnd></mat-icon>
+            Send
+          </button>
+        </div>
+      </form>
+    </ng-template>
+  </mat-step>
+</mat-stepper>
